tests/intend_failure/with_struct.stderr
error: Derive FromVariants for John failed. Must be an enum.
 --> tests/intend_failure/with_struct.rs:3:1
  |
3 | struct John {
  | ^^^^^^
